Separação das functions

--- a/cadastroLocalStorage/index.html
+++ b/cadastroLocalStorage/index.html
@@ -134,6 +134,9 @@
         <script src="plugins/js/ajax.js"></script>
         <!--Mask Form-->
         <script src="assets/functions/maskForm.js"></script>
+
+        <!--API Via Cep-->
+        <script src="assets/functions/viaCep.js"></script>
        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
         <script src="plugins/js/jquery-v.min.js"></script>
